--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -31,3 +31,7 @@ accordion:
 tabs:
   js:
     dist/02-molecules/menus/tabs/tabs.js: {}
+    
+toggle-tips:
+  js:
+    dist/02-molecules/toggle-tip/toggle-tip.js: {}
