--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
@@ -1,6 +1,7 @@
 name: "Karen A. Hoerst, MD"
 lead_title: "Medical Director, Stroke Program"
 rating: 4.9
+rating_icon: "star.svg"
 review_amt: 36
 provider_video: "https://www.youtube.com/embed/d3ZLhedUtkA"
 img:
@@ -12,3 +13,4 @@ appt_phone:
   label: "484-628-HELP"
 appt_url: "#"
 appt_icon: "th-cal.svg"
+appt_label: "Request an Appointment"
