--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -13,6 +13,7 @@ breadcrumb:
 name: "Karen A. Hoerst, MD"
 lead_title: "Medical Director, Stroke Program"
 rating: 4.9
+rating_icon: "star.svg"
 review_amt: 36
 provider_video:
   type: video
