--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -70,6 +70,7 @@ third_party_settings:
       children:
         - title
         - field_text
+        - field_body_components
       parent_name: group_ver
       weight: 20
       format_type: tab
@@ -153,7 +154,7 @@ content:
     region: content
   field_body_components:
     type: entity_reference_paragraphs
-    weight: 26
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -176,7 +177,7 @@ content:
     type: options_select
     region: content
   field_text:
-    weight: 4
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
