--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.storage.node.field_location_ref
     - field.storage.node.field_profile_languages
     - field.storage.node.field_profile_type
+    - field.storage.node.field_conditions_ref
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
   module:
@@ -243,6 +244,17 @@ field_settings:
     label: 'Service medical specialty field'
     property_path: service_medical_specialty_field
     type: string
+  service_related_condition:
+    label: 'Related Conditions » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_conditions_ref:entity:name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_conditions_ref
+      module:
+        - taxonomy
+        - taxonomy
   synonym:
     label: Synonyms
     datasource_id: 'entity:taxonomy_term'
@@ -286,10 +298,7 @@ datasource_settings:
   'entity:taxonomy_term':
     bundles:
       default: true
-      selected:
-        - areas_of_care
-        - program_type
-        - region
+      selected: {  }
     languages:
       default: true
       selected: {  }
@@ -320,6 +329,7 @@ processor_settings:
       - provider_specialties_name_string
       - rendered_item
       - service_medical_specialty_field
+      - service_related_condition
       - synonym
       - title
       - type
