--- a/docroot/themes/custom/tower_health/components/_data/header.yml
+++ b/docroot/themes/custom/tower_health/components/_data/header.yml
@@ -15,27 +15,27 @@ utility_items:
         cta
   
 header_menu_items:
-  - title: "Find a Provider"
+  - title: "Find a Doctor"
     url: "#"
     menu_name: "main-menu"
     below:
       - type: 'form'
-        button_label: 'Search Providers'
+        button_label: 'Search Doctors'
         link_url: '#'
-        link_content: 'Browse All Providers'
+        link_content: 'Browse All Doctors'
         autocomplete:
-          label: Find a Provider
+          label: Find a Doctor
           input_class: 
-          type: find-provider
+          type: find-Doctor
           placeholder: Search by Name, Specialty, or Condition
-          id: edit-find-provider
+          id: edit-find-Doctor
           path: some/path
           results:
             - label: Conditions
               children:
                 - id: 11
                   name: Conjunctivitis
-            - label: Providers
+            - label: Doctors
               children:
                 - id: 12
                   name: Monica Chung Kwan-consigli, Pa-c
