--- a/config/sites/default/core.entity_view_display.node.page.components.yml
+++ b/config/sites/default/core.entity_view_display.node.page.components.yml
@@ -30,7 +30,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      view_mode: default
+      view_mode: full_width
       link: ''
     third_party_settings: {  }
     region: content
