--- a/config/sites/default/core.entity_view_display.paragraph.large_hero.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.large_hero.default.yml
@@ -37,9 +37,9 @@ content:
     weight: 1
     label: hidden
     settings:
-      format: true-false
-      format_custom_true: ''
-      format_custom_false: ''
+      format: custom
+      format_custom_true: 'TRUE'
+      format_custom_false: 'FALSE'
     third_party_settings: {  }
     type: boolean
     region: content
