--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -74,3 +74,7 @@ reviews:
 listing-filter:
   js:
     components/js/listing-filter.js: {}
+    
+alert:
+  js:
+    dist/02-molecules/alert/alert.js: {}
